--- a/src/scss/components/_drop-down.scss
+++ b/src/scss/components/_drop-down.scss
@@ -71,6 +71,7 @@
 .tablet-nav{
   display: none;
   @media screen and (max-width:768px) {
+  z-index: 100;
   display: block;
   position: absolute;
   background-color:var(--blue-dark);
@@ -172,8 +173,10 @@
         display: flex;
         align-items: center;
         gap: 1rem;
+        z-index: 500;
         color: var(--light-slate);
         font-size: 18px;
+    
         >h3{
           text-transform: uppercase;
           font-family: var(--slug_way);
